--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "mdvueify",
-  "version": "0.0.1-alpha0.2",
+  "name": "md-vue-loader",
+  "version": "1.0.0",
   "main": "index.js",
   "repository": {
-    "url": "https://github.com/AngusFu/mdvueify.git",
+    "url": "https://github.com/AngusFu/md-vue-loader.git",
     "type": "git"
   },
   "author": "wemlion <angusfu1126@qq.com>",
   "license": "MIT",
   "dependencies": {
-    "md2vue": "^2.0.8",
-    "through": "^2.3.8"
+    "loader-utils": "^1.1.0",
+    "md2vue": "^3.0.1"
+  },
+  "peerDependencies": {
+    "vue": "^2.5.13"
   }
 }
